; ModuleID = '/home/carl/AnghaBench/qmk_firmware/layouts/community/ergodox/swissgerman/extr_keymap.c_go_back_based_on_tag.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/layouts/community/ergodox/swissgerman/extr_keymap.c_go_back_based_on_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KC_LEFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @go_back_based_on_tag(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i32 3, i32* %3, align 4
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %14, %1
  %6 = load i32, i32* %4, align 4
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @strlen(i8* %7)
  %9 = add nsw i32 %8, 3
  %10 = icmp slt i32 %6, %9
  br i1 %10, label %11, label %17

11:                                               ; preds = %5
  %12 = load i32, i32* @KC_LEFT, align 4
  %13 = call i32 @send_key(i32 %12)
  br label %14

14:                                               ; preds = %11
  %15 = load i32, i32* %4, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %4, align 4
  br label %5

17:                                               ; preds = %5
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @send_key(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
